<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#000000"
    android:gravity="center" >

	<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_text"
        android:textColor="#ffffff"
        android:textSize="@dimen/smalltext" 
        android:padding="10dp" />
    
     <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/intro_text"
        android:padding="10dp" />

     <Button
        android:id="@+id/reloadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reload_button_label"
        android:onClick="loadclick" 
        android:background="#ffffff"
        android:padding="10dp"/> 
        
    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_button_label"
        android:onClick="openHelp" 
        android:background="#ffffff"
        android:padding="10dp"
        android:layout_margin="10dp"/>


</LinearLayout>
